--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -2,12 +2,13 @@
 
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
 // bower:scss
-@import "../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "../../bower_components/foundation-sites/scss/foundation.scss";
 // endbower
+
+@include foundation-flex-grid;
 
 @import "common/global";
 @import "components/buttons";
-@import "components/comments";
 @import "components/forms";
 @import "components/grid";
 @import "components/wp-classes";
