--- a/assets/styles/components/_grid.scss
+++ b/assets/styles/components/_grid.scss
@@ -1,10 +1,20 @@
-// Grid system
-.main {
-  @include flex-grid-column($main-sm-columns);
-  .sidebar-primary & {
-    @include flex-grid-column($main-sm-columns - $sidebar-sm-columns);
+.container {
+  margin: 0 auto;
+  @include breakpoint(medium) {
+    max-width: 45rem;
+  }
+  @include breakpoint(large) {
+    max-width: 45rem;
+  }
+  @include breakpoint(xlarge) {
+    max-width: 60rem;
+  }
+  @include breakpoint(xxlarge) {
+    max-width: 75rem;
   }
 }
-.sidebar {
-  @include flex-grid-column($sidebar-sm-columns);
+
+.main {
+  @include flex-grid-row();
+
 }
