--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -5,12 +5,15 @@
 @import "../../bower_components/foundation-sites/scss/foundation.scss";
 // endbower
 
+@include foundation-global-styles;
 @include foundation-flex-grid;
+@include foundation-typography;
 
 @import "common/global";
 @import "components/buttons";
 @import "components/forms";
 @import "components/grid";
+@import "components/social-media";
 @import "components/wp-classes";
 @import "layouts/header";
 @import "layouts/sidebar";
