--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,6 +8,8 @@
 @include foundation-global-styles;
 @include foundation-flex-grid;
 @include foundation-typography;
+@include foundation-forms;
+@include dropdown-container;
 
 @import "common/global";
 @import "components/buttons";
@@ -15,6 +17,7 @@
 @import "components/grid";
 @import "components/social-media";
 @import "components/wp-classes";
+@import "components/associations";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
