--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Sage Starter Theme
-Theme URI:          https://roots.io/sage/
-Description:        Sage is a WordPress starter theme. <a href="https://github.com/roots/sage">Contribute on GitHub</a>
-Version:            8.3.0
-Author:             Roots
-Author URI:         https://roots.io/
+Theme Name:         EZ Grow Theme
+Theme URI:          http://ezgrow.ca
+Description:        Custom Theme developed for EZ Grow
+Version:            1.0.0
+Author:             Adam Wills
+Author URI:         https://adamwills.io
 Text Domain:        sage
 
 License:            MIT License
