--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -9,7 +9,10 @@ $blue:                  #0e1f8b;
 $grey:                  #494546;
 
 $topbar-background:     $brand-primary;
-$anchor-color: $brand-primary;
+$anchor-color:          $brand-primary;
 
 // Fonts
-$body-font-family: 'Muli', sans-serif;
+$body-font-family:     'Muli', sans-serif;
+
+// Buttons
+$button-background:     $brand-primary;
