--- a/assets/styles/components/_grid.scss
+++ b/assets/styles/components/_grid.scss
@@ -14,7 +14,24 @@
   }
 }
 
+.row {
+  flex-grow: 1;
+}
+
 .main {
   @include flex-grid-row();
 
+}
+
+.column {
+  padding-right: $padding-half / 2;
+  min-width: 0px;
+
+  &:last-of-type {
+    padding-right: $padding-half;
+  }
+}
+
+.column + .column {
+  padding-left: $padding-half / 2;
 }
